# VN_NEWS_VOICE

./: .gitignore  README.md
VNNewsVoice_CrawlingService/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
VNNewsVoice_CrawlingService/app/: config.py
VNNewsVoice_CrawlingService/app/consumer/: crawl_task_consumer.py
VNNewsVoice_CrawlingService/app/models/: article.py  crawl_task_message.py  ml_task_message.py
VNNewsVoice_CrawlingService/app/publisher/: ml_task_publisher.py
VNNewsVoice_CrawlingService/app/services/: __init__.py  article_claim_client.py  text_utils.py
VNNewsVoice_CrawlingService/app/services/crawlers/: __init__.py  base_crawler.py  crawler_factory.py  dantri_crawler.py  thanhnien_crawler.py  tuoitre_crawler.py  vnexpress_crawler.py
VNNewsVoice_CrawlingService/tests/: test_crawler_factory.py  test_text_utils.py
VNNewsVoice_MLWorkerService/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
VNNewsVoice_MLWorkerService/.dvc/: config
VNNewsVoice_MLWorkerService/app/: __init__.py
VNNewsVoice_MLWorkerService/app/core/: config.py
VNNewsVoice_MLWorkerService/app/messaging/: __init__.py  consumer.py  publisher.py  schemas.py  video_task_consumer.py
VNNewsVoice_MLWorkerService/app/models/: __init__.py  article.py
VNNewsVoice_MLWorkerService/app/services/: __init__.py  aws_storage_service.py  text_summarization.py  tts_service.py  video_generation_service.py
VNNewsVoice_MLWorkerService/app/services/tts/: __init__.py  base_provider.py  gemini_provider.py  provider_factory.py
VNNewsVoice_MLWorkerService/scripts/: entrypoint.sh  prepare_data.py  retrain_adapter.py
VNNewsVoice_MLWorkerService/tests/: test_tts_provider_factory.py  test_tts_service.py
VNNewsVoice_RAG_Service/: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
VNNewsVoice_RAG_Service/alembic/: env.py
VNNewsVoice_RAG_Service/alembic/versions/: 0677e33e0127_restore_conversation_tables.py  4cf697802035_add_parent_chunks_table.py
VNNewsVoice_RAG_Service/app/: main.py
VNNewsVoice_RAG_Service/app/alembic/: env.py
VNNewsVoice_RAG_Service/app/alembic/versions/: 26868e301bdf_init_conversation_memory_models.py
VNNewsVoice_RAG_Service/app/api/: deps.py
VNNewsVoice_RAG_Service/app/api/v1/: router.py
VNNewsVoice_RAG_Service/app/config/: database.py  logging.py  settings.py
VNNewsVoice_RAG_Service/app/core/: logging.py
VNNewsVoice_RAG_Service/app/core/generation/: __init__.py  generator.py
VNNewsVoice_RAG_Service/app/core/indexing/: chunker.py  embedder.py
VNNewsVoice_RAG_Service/app/models/: enums.py  schemas.py
VNNewsVoice_RAG_Service/app/repositories/: conversation_repository.py  parent_chunk_repository.py  vector_store.py
VNNewsVoice_RAG_Service/app/services/: article_event_consumer.py  cache_service.py  message_consumer.py
VNNewsVoice_RAG_Service/app/utils/: auth_user.py  limiter.py
VNNewsVoice_RAG_Service/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
VNNewsVoice_RAG_Service/tests/: conftest.py
VNNewsVoice_RAG_Service/tests/e2e/: test_api.py
VNNewsVoice_RAG_Service/tests/integration/: test_adaptive_pipeline.py  test_cache.py  test_hybrid_retriever.py
VNNewsVoice_RAG_Service/tests/unit/: test_chunker.py  test_evaluator.py  test_query_analyzer.py  test_refiner.py  test_strategy_builder.py
VNNewsVoice_RAG_Service/workers/: __main__.py  indexing_workers.py
(+423 files in other folders)
