[project]
name = "VNNewsVoice_RAG_Service"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) service for VN News Voice application."
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sentence-transformers",
    "torch==2.7.1+cpu",
    "qdrant-client",
    "ollama",
    "python-json-logger>=4.0.0",
    "underthesea>=9.0.0",
    "google-genai>=1.47.0",
    "openai>=2.18.0",
    "redis>=5.0.0",
    "rank-bm25>=0.2.2",
    "pika>=1.3.2",
    "aio-pika>=9.4.3",
    "sqlalchemy>=2.0.46",
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "fastembed>=0.7.4",
    "langgraph>=0.6.11",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
    "tiktoken>=0.12.0",
    "python-jose>=3.5.0",
    "httpx>=0.28.1",
    "anthropic>=0.85.0",
    "langchain-anthropic>=0.3.22",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=0.6.0",
    "ragas>=0.0.22",
    "litellm>=1.83.9",
]

[tool.setuptools]
packages = ["app", "workers"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff.lint]
fixable = ["F401", "F541"]
extend-ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402","F841","E712"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
